Run on a current JDK, and take the four upgrades that unlocked
Java 8 was the only thing holding logback, HikariCP and sttp below their
latest releases, and nothing was holding Java 8: the JRE ships inside our
own image, so no deploy target demanded it. The pin traced back to a
commit called "Update build.sbt" with no reason given. So the image is
now `eclipse-temurin:25-jre`, `-release` follows it, and the three held
dependencies plus lettuce go to current -- logback 1.3.16 to 1.6.3,
HikariCP 4.0.3 to 7.1.0, sttp 3.5.2 to 3.11.0, lettuce 6.8.2 to 7.7.0.

Lettuce 7 deprecates psetex, so setEx issues SET .. PX instead. That is
the same single round trip with the same millisecond expiry, and it is
what setIfAbsent on the next line was already doing.

A current JDK is not free here, and the cost is written next to the base
image rather than left for somebody to find in the logs: Pekko 1.7 calls
a `sun.misc.Unsafe` method that JDK 24 terminally deprecated, so every
start now prints four warnings before our own logging. They are left
unsilenced deliberately. The method is slated for removal, which will be
a startup failure rather than a warning, and a flag that hides it would
only mean finding out later.

Two dependencies are deleted rather than upgraded, for the same reason
guava was: nothing references them. scalamock has no `mock[`, no
`MockFactory`, no import anywhere in src. sbt-ide-settings sets none of
the ide* settings it exists to provide, and there is no .idea or .iml in
the tree -- it was also the one dependency here with no upgrade to take,
since only 1.1.0 was ever published for sbt 1.0, so deleting it settles
that too.

CI drifts less now. It ran Postgres 15 while compose ran 16; both are 18.
It also set only PGHOST and PGPASSWORD, so every suite that loads the
real discord.conf has been aborting on unresolved substitutions -- 14
tests that looked like they ran and did not. The four placeholders are
supplied, and the run includes doc, because scaladoc catch